--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
         </title>
     </head>
     <body>
-        Hello, World! I'm a HTML 5 site.
+        <header>
+            <h1>Hello, World! I'm a HTML 5 site.</h1>
+        </header>
+        <section>
+            <header>
+        <h2>Posts</h2>
+            </header>
+            <article>
+                <header>
+                    <h3>Post #1</h3>
+                </header>
+            </article>
+        </section>
+        <footer>
+            Contact : XXXX@gmail.com
+        </footer>
     </body>
 </html>
