--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </header>
             <article>
                 <header>
-                    <h3>Post #1</h3>
-                </header>
-            
+                    <h3>Post #1
+                        <p>Hello, this is my linkedin <a href="https://www.linkedin.com/in/evandropetrus/" target="_blank">here</a>.</p></h3>
+                </header>            
             </article>
         </section>
         <footer>
-        </footer>
-        <a>href="https://www.linkedin.com/in/evandropetrus/">LinkedIn </a>
+        
+    </footer>
     </body>
 </html>
