Added LinkedIn Image + header img

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <body>
         <header>
             
-            <h1>Hello, World! I'm a HTML 5 site.</h1>
-        
+            <h1>Hello, World! I'm a HTML 5 website.</h1>
+            <section>
+                <header>
+                    <img src= "123321.jpg" alt="Pintura Renascimento Vivre la liberté" width="450" height="325.5">
+                </header>
+            </section>
         </header>
         <section> 
             <header>
@@ -19,7 +23,7 @@
             <article>
                 <header>
                     <h3>Post #1
-                        <p>Hello, this is my linkedin <a href="https://www.linkedin.com/in/evandropetrus/" target="_blank">here</a>.</p></h3>
+                        <p>Hello, this is my linkedin: <a href="https://www.linkedin.com/in/evandropetrus/" target="_blank"><img src = "linkedin.webp" alt="Logo LinkedIn" width ="25" height="25"></a>.</p></h3>
                 </header>            
             </article>
         </section>
