Addind lists and css borders, padding

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </article>
         </section>
         <footer>
-        <ul>
+        
+        <h4 class ="list">    <ul>
             <li>
                 <a href = "mailto:evandro_petrus@Outlook.com">evandro_petrus@outlook.com</a>
             
@@ -41,6 +42,7 @@
                 <a href ="https://github.com/EvandroPetrus" target ="_blank">GitHub</a>
             </li>
         </ul>
+        </h4>
     </footer>
     </body>
 </html>
